--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -32,13 +32,24 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <TextView
-            android:id="@+id/text_content"
+            android:id="@+id/tv_text_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="Loading..." />
 
     </androidx.core.widget.NestedScrollView>
+
+    <ru.skillbranch.skillarticles.ui.custom.ArticleSubmenu
+        android:id="@+id/submenu"
+        android:theme="@style/ArticleBarsTheme"
+        android:layout_width="200dp"
+        android:layout_height="96dp"
+        android:layout_gravity="bottom|right"
+        app:layout_dodgeInsetEdges="bottom"
+        android:elevation="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"/>
 
     <ru.skillbranch.skillarticles.ui.custom.Bottombar
         android:id="@+id/bottombar"
@@ -47,6 +58,7 @@
         android:layout_gravity="bottom"
         android:theme="@style/ArticleBarsTheme"
         android:elevation="4dp"
+        app:layout_insetEdge="bottom"
         >
 
     </ru.skillbranch.skillarticles.ui.custom.Bottombar>
