--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,32 +12,36 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            android:theme="@style/ArticleBarsTheme"
-            style="@style/ArticleToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ArticleBarsTheme"
+            style="@style/ArticleToolbar"
             app:logo="@drawable/logo_placeholder"
             app:title="@string/app_name"
             app:subtitle="loading..."
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             android:elevation="4dp"/>
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-        <TextView
+
+        <ru.skillbranch.skillarticles.ui.custom.markdown.MarkdownContentView
             android:id="@+id/tv_text_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:padding="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:textIsSelectable="true"
-            android:text="Loading..."/>
+            android:clipToPadding="false"
+            android:textColor="?attr/colorOnBackground"
+            android:text="@string/loading_placeholder" />
     </androidx.core.widget.NestedScrollView>
 
     <ru.skillbranch.skillarticles.ui.custom.ArticleSubmenu
@@ -45,10 +49,10 @@
         android:theme="@style/ArticleBarsTheme"
         android:layout_width="200dp"
         android:layout_height="96dp"
-        android:layout_gravity="bottom|right"
-        android:elevation="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:elevation="8dp"
         app:layout_dodgeInsetEdges="bottom"
         android:visibility="gone"
         tools:visibility="visible"/>
@@ -57,9 +61,11 @@
         android:id="@+id/bottombar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:minHeight="56dp"
         android:layout_gravity="bottom"
         android:theme="@style/ArticleBarsTheme"
         android:elevation="4dp"
         app:layout_insetEdge="bottom"/>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
