--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -1,71 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.RootActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/appbar">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
             android:theme="@style/ArticleBarsTheme"
             style="@style/ArticleToolbar"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/toolbar"
             app:logo="@drawable/logo_placeholder"
             app:title="@string/app_name"
             app:subtitle="loading..."
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             android:elevation="4dp"/>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/scroll"
         android:layout_width="match_parent"
+        android:id="@+id/scroll"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <ru.skillbranch.skillarticles.ui.custom.markdown.MarkdownContentView
-            android:id="@+id/tv_text_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_height="match_parent"
+            android:id="@+id/tv_text_content"
+            android:layout_margin="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:clipToPadding="false"
-            android:textColor="?attr/colorOnBackground"
-            android:text="@string/loading_placeholder" />
-    </androidx.core.widget.NestedScrollView>
+            android:text="Loading..." />
 
+    </androidx.core.widget.NestedScrollView>
+    
     <ru.skillbranch.skillarticles.ui.custom.ArticleSubmenu
-        android:id="@+id/submenu"
-        android:theme="@style/ArticleBarsTheme"
         android:layout_width="200dp"
         android:layout_height="96dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/submenu"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:elevation="8dp"
         app:layout_dodgeInsetEdges="bottom"
+        android:theme="@style/ArticleBarsTheme"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
     <ru.skillbranch.skillarticles.ui.custom.Bottombar
-        android:id="@+id/bottombar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="300dp"
         android:minHeight="56dp"
         android:layout_gravity="bottom"
+        app:layout_insetEdge="bottom"
+        android:id="@+id/bottombar"
         android:theme="@style/ArticleBarsTheme"
-        android:elevation="4dp"
-        app:layout_insetEdge="bottom"/>
+        android:elevation="4dp" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
