--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -8,63 +8,60 @@
     tools:context=".ui.RootActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/appbar">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:layout_width="match_parent"
+            android:id="@+id/toolbar"
             android:theme="@style/ArticleBarsTheme"
             style="@style/ArticleToolbar"
+            android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:id="@+id/toolbar"
             app:logo="@drawable/logo_placeholder"
             app:title="@string/app_name"
-            app:subtitle="loading..."
+            app:subtitle="Loading..."
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             android:elevation="4dp"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
         android:id="@+id/scroll"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <ru.skillbranch.skillarticles.ui.custom.markdown.MarkdownContentView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/tv_text_content"
-            android:layout_margin="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:clipToPadding="false"
-            android:text="Loading..." />
-
+            android:clipToPadding="false"/>
     </androidx.core.widget.NestedScrollView>
-    
+
     <ru.skillbranch.skillarticles.ui.custom.ArticleSubmenu
+        android:id="@+id/submenu"
+        android:theme="@style/ArticleBarsTheme"
         android:layout_width="200dp"
         android:layout_height="96dp"
-        android:layout_gravity="bottom|end"
-        android:id="@+id/submenu"
-        android:layout_marginRight="8dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:elevation="8dp"
         app:layout_dodgeInsetEdges="bottom"
-        android:theme="@style/ArticleBarsTheme"
         android:visibility="gone"
-        tools:visibility="visible" />
+        tools:visibility="visible"/>
 
     <ru.skillbranch.skillarticles.ui.custom.Bottombar
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:minHeight="56dp"
-        android:layout_gravity="bottom"
-        app:layout_insetEdge="bottom"
         android:id="@+id/bottombar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_gravity="bottom"
         android:theme="@style/ArticleBarsTheme"
-        android:elevation="4dp" />
-
-
+        android:elevation="4dp"
+        app:layout_insetEdge="bottom"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
