--- a/app/src/main/res/layout/layout_bottombar.xml
+++ b/app/src/main/res/layout/layout_bottombar.xml
@@ -2,140 +2,101 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
+    tools:background="@color/color_on_article_bar">
 
-        <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
-            android:id="@+id/btn_like"
-            style="@style/BottombarIcon"
-            android:src="@drawable/like_states"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_bookmark"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023" />
 
-        <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
-            android:id="@+id/btn_bookmark"
-            style="@style/BottombarIcon"
-            android:src="@drawable/bookmark_states"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_share"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/btn_like"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023" />
+    <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
+        android:id="@+id/btn_like"
+        style="@style/BottombarIcon"
+        android:src="@drawable/like_states"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_bookmark"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
+        android:id="@+id/btn_bookmark"
+        style="@style/BottombarIcon"
+        android:src="@drawable/bookmark_states"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_share"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_like"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/btn_share"
+        style="@style/BottombarIcon"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_share_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_bookmark"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
+        android:id="@+id/btn_settings"
+        style="@style/BottombarIcon"
+        android:src="@drawable/ic_format_size_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/bottom_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="btn_like,btn_bookmark,btn_share,btn_settings" />
+
+    <LinearLayout
+        android:id="@+id/reveal"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/color_on_article_bar"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible">
+
 
         <ImageView
-            android:id="@+id/btn_share"
-            style="@style/BottombarIcon"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_share_black_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_bookmark"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023" />
+            android:id="@+id/btn_search_close"
+            style="@style/BottombarSearchIcon"
+            android:src="@drawable/ic_close_black_24dp"
+            tools:tint = "@android:color/white"/>
+
+        <TextView
+            android:id="@+id/tv_search_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Not found"
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="center_vertical"
+            android:textColor="?attr/colorPrimary"
+            tools:textColor="@android:color/white"
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="1"/>
 
         <ImageView
-            android:id="@+id/btn_share2"
-            style="@style/BottombarIcon"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_share_black_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btn_share"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023" />
+            android:id="@+id/btn_result_down"
+            style="@style/BottombarSearchIcon"
+            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
+            tools:tint = "@android:color/white"/>
+        <ImageView
+            android:id="@+id/btn_result_up"
+            style="@style/BottombarSearchIcon"
+            android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
+            tools:tint = "@android:color/white"/>
 
-        <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
-            android:id="@+id/btn_settings"
-            style="@style/BottombarIcon"
-            android:src="@drawable/ic_format_size_black_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023" />
-
-        <WebView
-                android:id="@+id/webview"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/btn_settings"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-        <androidx.constraintlayout.widget.Group
-                android:id="@+id/bottom_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:constraint_referenced_ids="btn_like, btn_bookmark, btn_share, btn_settings" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/color_on_article_bar"
-                android:visibility="gone"
-                android:id="@+id/reveal"
-                tools:visibility="visible"
-                android:orientation="horizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:clickable="true"
-                    android:focusable="true"
-                    style="@style/BottombarSearchIcon"
-                    android:id="@+id/btn_search_close"
-                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/btn_search_close"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_height="wrap_content"
-                    android:text="Not found"
-                    android:id="@+id/tv_search_result"
-                    android:textColor="?attr/colorPrimary"
-                    tools:textColor="@android:color/white"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="16dp" />
-
-
-                <ImageView
-                    android:id="@+id/btn_result_up"
-                    style="@style/BottombarSearchIcon"
-                    android:layout_gravity="center"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:src="@android:drawable/arrow_up_float"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintLeft_toRightOf="@+id/search_result"
-                    app:layout_constraintRight_toLeftOf="@id/btn_result_down"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
-
-                <ImageView
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/btn_result_up"
-                    style="@style/BottombarSearchIcon"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:id="@+id/btn_result_down"
-                    android:layout_gravity="center"
-                    android:src="@android:drawable/arrow_down_float" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </LinearLayout>
 </merge>
