--- a/app/src/main/res/layout/layout_submenu.xml
+++ b/app/src/main/res/layout/layout_submenu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ru.skillbranch.skillarticles.ui.custom.CheckableImageView
         android:id="@+id/btn_text_down"
@@ -72,4 +72,4 @@
         android:textColor="?attr/colorOnSurface"
         android:layout_marginLeft="16dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
