--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,9 @@
     <color name="color_on_article_bar">#1C0E42</color>
     <color name="color_divider">#1F000000</color>
 
-    <color name="darkSurfaceColor">#272727</color>
-    <color name="darkOnSurfaceColor">#F6F6F6</color>
-    <color name="lightSurfaceColor">#F6F6F6</color>
-    <color name="lightOnSurfaceColor">#272727</color>
+    <color name="search_color_text">#000</color>
+    <color name="search_color_hint">#1F000000</color>
+
+    <color name="opacity_color_surface">#08000000</color>
+    <color name="color_divider2">#FC4C4C</color>
 </resources>
